--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
